clang/test/BSC/Negative/Method/Enum/enum_conflict_return_type/enum_conflict_return_type.cbs
// RUN: %clang_cc1 -verify %s

enum E {
    X3,
    X4
};

double enum E::getA(enum E* this); // expected-note {{previous declaration is here}}
int enum E::getA(enum E* this) { // expected-error {{conflicting types for 'getA'}}
  return X4;
}